--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Mieco
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-j-8.0.32.jar=src\\Utilidades\\mysql-connector-j-8.0.32.jar
 file.reference.RSCalendar.jar=lib/RSCalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.RSCalendar.jar}
+    ${file.reference.RSCalendar.jar}:\
+    ${file.reference.mysql-connector-j-8.0.32.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
