--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Mieco
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-j-8.0.32.jar=src\\Utilidades\\mysql-connector-j-8.0.32.jar
 file.reference.RSCalendar.jar=lib/RSCalendar.jar
@@ -44,7 +45,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.RSCalendar.jar}:\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
