--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,8 @@ endorsed.classpath=
 excludes=
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
+file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
+file.reference.jsoup-1.18.3.jar=lib\\jsoup-1.18.3.jar
 file.reference.mysql-connector-j-8.0.32.jar=src\\Utilidades\\mysql-connector-j-8.0.32.jar
 file.reference.RSCalendar.jar=lib/RSCalendar.jar
 includes=**
@@ -46,7 +48,9 @@ javac.classpath=\
     ${file.reference.RSCalendar.jar}:\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jsoup-1.18.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
